--- a/_posts/2015-12-14-nips-2015.md
+++ b/_posts/2015-12-14-nips-2015.md
@@ -122,7 +122,7 @@ This is an overview of most of the lectures I found illuminating at the NIPS 201
   - Multilingual Translation: most interesting of the three that he’s been looking at
     - Does knowing Language F help with Language E? Unsolved for both humans and machines
     - Do one NxM language model to avoid quadratic explosion of # of parameters
-    - Long et al (2015): Multingua Seq2Seq
+    - Long et al (2015): Multilingual Seq2Seq
     - Is this an interlingua?
     - Is attention model universal or language specific?
     - This is interesting because multilingual corresponds to multimodal and multitask
