updates w posts and w gemfile

--- a/_posts/2020-07-26-hyp-equiv.md
+++ b/_posts/2020-07-26-hyp-equiv.md
@@ -5,6 +5,9 @@ permalink: equivariant-rendering-motion
 tags: hypothesis,rendering
 ---
 
+
+## Can we use equivariance to disentangle components of a video?
+
 # Background
 
 - As explored in [ICML 2020](https://arxiv.org/abs/2006.07630), an equivariant renderer {% raw %}$$g$${% endraw %} is one where {% raw %}\begin{align}z &= f(x)\\\\g(z) &= x\\\\g(T^z(z)) = g(T^z(f(x)) &= T^x(g(z)) = T^x(x)\end{align}{% endraw %}
@@ -12,7 +15,7 @@ tags: hypothesis,rendering
 - Note that in a video we have several parts which can be placed into two sets: C and B. Here, C is the set of moving characters and B is the static background (everything else).
 - Further, at an appropriate level of granularity, the change in a character’s position between any sufficiently close frames {% raw %}$$f_t$${% endraw %} and $$f_{t+1}$$ can be modeled as an affine transformation $$T$$. This is a model of the movement and is of course prone to mistakes, but it’s a reasonable assumption that should hold better as we increase the frames per second.
 
-## Hypothesis
+# Hypothesis
 
 - From this model, we hypothesize that we can disentangle a scene into characters and background by training a renderer to be equivariant to affine transformations of a character and invariant to transformations of the background.
 - In other words, assuming a single moving character, we train $$g$$, $$f$$, and $$h$$ s.t. \begin{align}g(T^z(f(x)) + h(x)) = T^x(x) = x'\end{align} 
@@ -26,7 +29,7 @@ tags: hypothesis,rendering
 - Afterward, we now have the ability to render the character in any affine way on any of the trained backgrounds by mixing the backgrounds via $$h(x^k)$$ and the affine transformations of $$f(x^j)$$. This can let us make new videos with this character.
 - Note that the $$T^z$$ acts on $$f$$ like a spatial transformer. Here, $$f$$ is not a flat encoding but rather the output of a convolutional step (so $$H' \times W' \times C'$$) and so $$T^z$$ applies an affine transformation to each $$H' \times W'$$ part.
 
-## Variations
+# Variations
 
 - Assuming a 2d image sequence, $$T^z$$ and $$T^x$$ are both $$2 \times 3$$ affine matrices. What is the domain of $$T^z$$?
   - One variation is that it is a function of just $$T^x$$, i.e. $$T^z: \mathbb{R}^6 \rightarrow \mathbb{R}^6$$. In that case, we need to know the affine transformation applied to the character during training.
