--- a/_posts/2020-07-26-hyp-equiv.md
+++ b/_posts/2020-07-26-hyp-equiv.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: Equivariant Rendering from Motion
+blurb: "Hypothesis: can we use equivariance and invariance to disentangle the characters and the background of a video in an unsupervised way?"
 permalink: equivariant-rendering-motion
 tags: hypothesis,rendering
 ---
